--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,9 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.4",
+    "@types/react-dom": "18.3.0",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.39",
     "tailwindcss": "3.4.7",
